# data-science-softuni-project-2026

./: draft-bosch.ipynb  draft-bosch2.ipynb  draft2.ipynb  draft3.ipynb  pyproject.toml
